fixes a small issue on iphone 6 plus

--- a/wp-content/themes/lowy/css/sass/_home-page.scss
+++ b/wp-content/themes/lowy/css/sass/_home-page.scss
@@ -198,7 +198,7 @@
     .hero--home {
         h1 {
             font-size: 3.5rem;
-            max-width: 65rem;
+            max-width: 44rem;
         }
     }
 }
